--- a/Assets/UI/StyleSheets/LayoutEditorStyles.uss
+++ b/Assets/UI/StyleSheets/LayoutEditorStyles.uss
@@ -124,11 +124,26 @@ VisualElement {
     -unity-background-scale-mode: stretch-to-fill;
 }
 
-.unity-base-field__label{
+.unity-base-field__label {
     min-width: 50px;
 }
 
-.unity-base-text-field__input{
+.unity-base-text-field__input {
     min-width: 32px;
     max-width: 64px;
+}
+
+.comparison_container {
+    padding-top: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    border-top-width: 5px;
+    border-right-width: 5px;
+    border-bottom-width: 5px;
+    border-left-width: 5px;
+    border-left-color: rgb(243, 171, 0);
+    border-right-color: rgb(243, 171, 0);
+    border-top-color: rgb(243, 171, 0);
+    border-bottom-color: rgb(243, 171, 0);
 }
