--- a/Assets/UI/UXML/LayoutEditor.uxml
+++ b/Assets/UI/UXML/LayoutEditor.uxml
@@ -2,7 +2,9 @@
     <Style src="project://database/Assets/UI/StyleSheets/LayoutEditorStyles.uss?fileID=7433441132597879392&amp;guid=8ae92a8b5f9424e42a8849c5c201882e&amp;type=3#LayoutEditorStyles" />
     <Style src="project://database/Assets/UI/StyleSheets/FloorIconStyles.uss?fileID=7433441132597879392&amp;guid=273822ff3b16a7343a5b859dd5c6f3b8&amp;type=3#FloorIconStyles" />
     <ui:VisualElement name="ve_floor_plan_screen" style="background-color: rgba(0, 0, 0, 0); flex-grow: 1;">
-        <ui:VisualElement name="ve_inspector" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row; visibility: hidden; overflow: hidden; display: flex;">
+        <ui:Label tabindex="-1" text="Pre-Kaizen Layout" display-tooltip-when-elided="true" name="lbl_layout_header" style="background-color: rgb(203, 231, 255); -unity-text-align: upper-center; -unity-font-style: bold; font-size: 28px;" />
+        <ui:VisualElement name="ve_inspector" style="background-color: rgba(0, 0, 0, 0); visibility: visible; overflow: hidden; display: flex; flex-direction: row;">
+            <ui:Button text="Back Button" display-tooltip-when-elided="true" name="btn_back" style="font-size: 24px; flex-shrink: 1; display: flex; background-color: rgb(203, 231, 255);" />
             <ui:VisualElement name="ve_floor_specs" class="skyblue_background" style="flex-grow: 1; overflow: hidden; width: 30%; visibility: visible; border-right-width: 5px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);">
                 <ui:Label tabindex="-1" text="Floor Area" display-tooltip-when-elided="true" style="font-size: 24px; -unity-text-align: upper-center;" />
                 <ui:VisualElement name="ve_container" style="flex-grow: 0; width: 70%; align-self: center;">
@@ -22,11 +24,13 @@
                         <ui:Slider picking-mode="Ignore" label="Rotation" value="42" high-value="180" low-value="-180" inverted="false" name="slider_rotation" style="max-width: 75%; flex-grow: 1;" />
                     </ui:VisualElement>
                 </ui:VisualElement>
-                <ui:Button text="Delete" display-tooltip-when-elided="true" name="btn_delete" style="width: 25%; align-self: flex-start; -unity-font-style: bold;" />
+                <ui:Button text="Delete" display-tooltip-when-elided="true" name="btn_delete" style="width: 25%; align-self: center; -unity-font-style: bold; display: none;" />
             </ui:VisualElement>
+            <ui:Button text="Next Button" display-tooltip-when-elided="true" name="btn_next" style="font-size: 24px; flex-shrink: 1; background-color: rgb(203, 231, 255);" />
         </ui:VisualElement>
-        <ui:VisualElement name="ve_layout_container" focusable="true" style="background-color: rgb(255, 255, 255); flex-grow: 1; align-items: center; justify-content: center; height: 60%;">
-            <ui:VisualElement name="ve_layout_area" style="flex-grow: 1;" />
+        <ui:VisualElement name="ve_layout_container" focusable="true" style="background-color: rgb(255, 255, 255); flex-grow: 1; align-items: center; justify-content: center; height: 60%; flex-direction: column;">
+            <ui:VisualElement name="ve_pre_kaizen_layout_area" />
+            <ui:VisualElement name="ve_post_kaizen_layout_area" />
             <ui:ScrollView name="scroll_layout_area" style="flex-grow: 1; justify-content: center; align-self: center; display: none;" />
         </ui:VisualElement>
         <ui:ScrollView name="ve_icons" class="skyblue_background" style="padding-top: 20px;">
