--- a/Assets/UI/UXML/ComparisonPage.uxml
+++ b/Assets/UI/UXML/ComparisonPage.uxml
@@ -1,18 +1,18 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <ui:VisualElement name="ve_root_container" style="flex-grow: 1; min-width: auto; min-height: auto; background-color: rgb(255, 255, 255);">
         <ui:VisualElement name="ve_upper" style="height: 10%;">
-            <ui:Button text="Back to Layout Tool" display-tooltip-when-elided="true" name="btn_back" style="background-color: rgb(203, 231, 255);" />
+            <ui:Button text="Back to Layout Tool" display-tooltip-when-elided="true" name="btn_back" style="background-color: rgb(203, 231, 255); -unity-font-style: bold; font-size: 20px;" />
         </ui:VisualElement>
         <ui:VisualElement name="ve_layouts_container" style="height: 40%; flex-direction: row; justify-content: center;">
-            <ui:VisualElement name="ve_pre_kaizen_layout" style="flex-grow: 0; padding-right: 20px; padding-left: 20px; width: 35%;">
-                <ui:VisualElement name="ve_pre_kaizen_container" style="flex-grow: 0; -unity-background-scale-mode: scale-to-fit; border-left-color: rgb(164, 164, 164); border-right-color: rgb(164, 164, 164); border-top-color: rgb(164, 164, 164); border-bottom-color: rgb(164, 164, 164); border-top-width: 2px; border-right-width: 2px; border-bottom-width: 2px; border-left-width: 2px;" />
-                <ui:Label tabindex="-1" text="Pre-Kaizen Layout" display-tooltip-when-elided="true" style="-unity-text-align: upper-center;" />
+            <ui:VisualElement name="ve_pre_kaizen_layout" style="flex-grow: 0; padding-right: 20px; padding-left: 20px; width: 480px; height: 480px; max-width: 480px; min-width: 480px; max-height: 480px; min-height: 480px;">
+                <ui:VisualElement name="ve_pre_kaizen_container" style="flex-grow: 0; -unity-background-scale-mode: scale-to-fit; border-left-color: rgb(164, 164, 164); border-right-color: rgb(164, 164, 164); border-top-color: rgb(164, 164, 164); border-bottom-color: rgb(164, 164, 164); border-top-width: 2px; border-right-width: 2px; border-bottom-width: 2px; border-left-width: 2px; height: 400px; width: 400px;" />
+                <ui:Label tabindex="-1" text="Pre-Kaizen Layout" display-tooltip-when-elided="true" style="-unity-text-align: upper-center; max-width: 400px; font-size: 18px; -unity-font-style: bold;" />
             </ui:VisualElement>
-            <ui:VisualElement name="ve_post_kaizen_layout" style="flex-grow: 0; padding-right: 20px; width: 35%;">
-                <ui:VisualElement name="ve_post_kaizen_container" style="flex-grow: 0; -unity-background-scale-mode: scale-to-fit; border-left-color: rgb(164, 164, 164); border-right-color: rgb(164, 164, 164); border-top-color: rgb(164, 164, 164); border-bottom-color: rgb(164, 164, 164); border-top-width: 2px; border-right-width: 2px; border-bottom-width: 2px; border-left-width: 2px;" />
-                <ui:Label tabindex="-1" text="Post-Kaizen Layout" display-tooltip-when-elided="true" style="-unity-text-align: upper-center;" />
+            <ui:VisualElement name="ve_post_kaizen_layout" style="flex-grow: 0; padding-right: 20px; width: 480px; height: 480px;">
+                <ui:VisualElement name="ve_post_kaizen_container" style="flex-grow: 0; -unity-background-scale-mode: scale-to-fit; border-left-color: rgb(164, 164, 164); border-right-color: rgb(164, 164, 164); border-top-color: rgb(164, 164, 164); border-bottom-color: rgb(164, 164, 164); border-top-width: 2px; border-right-width: 2px; border-bottom-width: 2px; border-left-width: 2px; width: 400px; height: 400px;" />
+                <ui:Label tabindex="-1" text="Post-Kaizen Layout" display-tooltip-when-elided="true" style="-unity-text-align: upper-center; max-width: 400px; font-size: 18px; -unity-font-style: bold;" />
             </ui:VisualElement>
         </ui:VisualElement>
-        <ui:VisualElement name="ve_lower" style="height: 50%; min-height: auto;" />
+        <ui:VisualElement name="ve_lower" style="height: 50px; min-height: auto;" />
     </ui:VisualElement>
 </ui:UXML>
