--- a/Assets/UI/UXML/FloorDimensionsInput.uxml
+++ b/Assets/UI/UXML/FloorDimensionsInput.uxml
@@ -1,10 +1,10 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <ui:VisualElement name="ve_root_element" style="flex-grow: 1; background-color: rgb(144, 144, 144); justify-content: center;">
         <ui:VisualElement name="ve_floor_specs" class="skyblue_background" style="flex-grow: 1; overflow: hidden; visibility: visible; align-self: center; justify-content: flex-start; height: 60%; max-height: 60%; background-color: rgb(203, 231, 255); width: 80%; max-width: 80%;">
-            <ui:Label tabindex="-1" text="Please Enter Kaizen Area Dimensions" display-tooltip-when-elided="true" style="font-size: 24px; -unity-text-align: upper-center;" />
+            <ui:Label tabindex="-1" text="Please Enter Kaizen Area Dimensions" display-tooltip-when-elided="true" style="font-size: 24px; -unity-text-align: upper-center; padding-top: 20px;" />
             <ui:VisualElement name="ve_container" style="flex-grow: 0; align-self: center; flex-direction: row; width: 90%; height: 60%; padding-top: 10%;">
                 <ui:VisualElement name="ve_floor_length" style="justify-content: center; align-self: auto; padding-right: 10px;">
-                    <ui:Label tabindex="-1" text="Length" display-tooltip-when-elided="true" style="-unity-text-align: upper-center;" />
+                    <ui:Label tabindex="-1" text="Length" display-tooltip-when-elided="true" style="-unity-text-align: upper-center; font-size: 16px;" />
                     <ui:FloatField value="5" name="float_floor_length" style="height: auto; flex-shrink: 1;" />
                     <ui:Label tabindex="-1" text="meters" display-tooltip-when-elided="true" style="-unity-text-align: upper-center;" />
                 </ui:VisualElement>
@@ -12,11 +12,13 @@
                 <ui:VisualElement style="min-width: 10%;" />
             </ui:VisualElement>
             <ui:VisualElement name="ve_floor_width" style="flex-grow: 0; width: 70%; align-self: center; flex-direction: row; justify-content: center; padding-top: 10px; padding-bottom: 10px;">
-                <ui:Label tabindex="-1" text="Width" display-tooltip-when-elided="true" style="-unity-text-align: middle-center;" />
+                <ui:Label tabindex="-1" text="Width" display-tooltip-when-elided="true" style="-unity-text-align: middle-center; font-size: 16px;" />
                 <ui:FloatField value="5" name="float_floor_width" class="inspector_float_field" style="justify-content: center;" />
                 <ui:Label tabindex="-1" text="meters" display-tooltip-when-elided="true" style="-unity-text-align: middle-center;" />
             </ui:VisualElement>
-            <ui:Button text="Finished" display-tooltip-when-elided="true" name="btn_finished" style="max-width: 25%; align-self: flex-end; background-color: rgb(203, 231, 255); border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px;" />
+            <ui:VisualElement style="flex-grow: 1; padding-top: 30px;">
+                <ui:Button text="Finished" display-tooltip-when-elided="true" name="btn_finished" style="align-self: center; background-color: rgb(203, 231, 255); border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; flex-grow: 1; flex-shrink: 1; font-size: 24px; height: 5%; width: 30%; max-height: 25%;" />
+            </ui:VisualElement>
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
