--- a/Assets/UI/UXML/LayoutEditor.uxml
+++ b/Assets/UI/UXML/LayoutEditor.uxml
@@ -2,33 +2,32 @@
     <Style src="project://database/Assets/UI/StyleSheets/LayoutEditorStyles.uss?fileID=7433441132597879392&amp;guid=8ae92a8b5f9424e42a8849c5c201882e&amp;type=3#LayoutEditorStyles" />
     <Style src="project://database/Assets/UI/StyleSheets/FloorIconStyles.uss?fileID=7433441132597879392&amp;guid=273822ff3b16a7343a5b859dd5c6f3b8&amp;type=3#FloorIconStyles" />
     <ui:VisualElement name="ve_floor_plan_screen" style="background-color: rgba(0, 0, 0, 0); flex-grow: 1;">
-        <ui:Label tabindex="-1" text="Pre-Kaizen Layout" display-tooltip-when-elided="true" name="lbl_layout_header" style="background-color: rgb(203, 231, 255); -unity-text-align: upper-center; -unity-font-style: bold; font-size: 28px;" />
-        <ui:VisualElement name="ve_inspector" style="background-color: rgba(0, 0, 0, 0); visibility: visible; overflow: hidden; display: flex; flex-direction: row;">
+        <ui:Label tabindex="-1" text="Pre-Kaizen Layout" display-tooltip-when-elided="true" name="lbl_layout_header" style="background-color: rgb(203, 231, 255); -unity-text-align: upper-center; -unity-font-style: bold; font-size: 32px; margin-bottom: 0; margin-top: 0; margin-right: 0; margin-left: 0; padding-top: 0; padding-right: 0; padding-bottom: 10px; padding-left: 0;" />
+        <ui:VisualElement name="ve_inspector" style="background-color: rgb(203, 231, 255); visibility: visible; overflow: hidden; display: flex; flex-direction: row;">
             <ui:Button text="Back Button" display-tooltip-when-elided="true" name="btn_back" style="font-size: 24px; flex-shrink: 1; display: flex; background-color: rgb(203, 231, 255);" />
             <ui:VisualElement name="ve_floor_specs" class="skyblue_background" style="flex-grow: 1; overflow: hidden; width: 30%; visibility: visible; border-right-width: 5px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); display: flex;">
                 <ui:Label tabindex="-1" text="Floor Area" display-tooltip-when-elided="true" style="font-size: 24px; -unity-text-align: upper-center;" />
                 <ui:VisualElement name="ve_container" style="flex-grow: 0; width: 70%; align-self: center;">
-                    <ui:FloatField label="Height (meters)" value="5" name="float_floor_height" class="inspector_float_field" style="width: 100%; flex-shrink: 1; flex-grow: 0; justify-content: center;" />
-                    <ui:FloatField label="Width (meters)" value="5" name="float_floor_width" class="inspector_float_field" style="width: 100%; justify-content: center;" />
+                    <ui:FloatField label="Height (m)" value="5" name="float_floor_height" class="inspector_float_field" style="width: 100%; flex-shrink: 1; flex-grow: 0; justify-content: center;" />
+                    <ui:FloatField label="Width (m)" value="5" name="float_floor_width" class="inspector_float_field" style="width: 100%; justify-content: center;" />
                 </ui:VisualElement>
             </ui:VisualElement>
             <ui:VisualElement name="ve_selection_inspector" class="skyblue_background" style="flex-grow: 1; overflow: hidden; width: 50%; visibility: visible;">
                 <ui:Label tabindex="-1" text="Current Selection" display-tooltip-when-elided="true" style="font-size: 24px; -unity-text-align: upper-center;" />
                 <ui:VisualElement name="ve_inspector_container" style="padding-bottom: 40px; flex-direction: row;">
-                    <ui:VisualElement name="ve_left_fields" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); width: 40%; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-right-width: 1px;">
-                        <ui:FloatField label="Height (m)" value="0" name="float_height" />
-                        <ui:FloatField label="Width (m) " value="0" name="float_width" />
+                    <ui:VisualElement name="ve_left_fields" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-right-width: 1px;">
+                        <ui:FloatField label="Height (m)" value="0" name="float_height" style="align-self: center;" />
+                        <ui:FloatField label="Width (m) " value="0" name="float_width" style="align-self: center;" />
                     </ui:VisualElement>
-                    <ui:VisualElement name="ve_right_fields" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); width: 60%;">
-                        <ui:Vector2Field label="Position" name="v2_position" style="padding-right: 10px;" />
-                        <ui:Slider picking-mode="Ignore" label="Rotation" value="42" high-value="180" low-value="-180" inverted="false" name="slider_rotation" style="max-width: 75%; flex-grow: 1;" />
+                    <ui:VisualElement name="ve_right_fields" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0);">
+                        <ui:Vector2Field name="v2_position" style="padding-right: 10px; align-self: center;" />
                     </ui:VisualElement>
                 </ui:VisualElement>
-                <ui:Button text="Delete" display-tooltip-when-elided="true" name="btn_delete" style="width: 25%; align-self: center; -unity-font-style: bold; display: none;" />
+                <ui:Slider picking-mode="Ignore" label="Rotation" value="42" high-value="180" low-value="-180" inverted="false" name="slider_rotation" style="max-width: 75%; flex-grow: 1; align-self: center;" />
             </ui:VisualElement>
             <ui:Button text="Next Button" display-tooltip-when-elided="true" name="btn_next" style="font-size: 24px; flex-shrink: 1; background-color: rgb(203, 231, 255);" />
         </ui:VisualElement>
-        <ui:VisualElement name="ve_layout_container" focusable="true" style="background-color: rgb(255, 255, 255); flex-grow: 1; align-items: center; justify-content: center; height: 60%; flex-direction: column;">
+        <ui:VisualElement name="ve_layout_container" focusable="true" style="background-color: rgb(255, 255, 255); flex-grow: 1; align-items: center; justify-content: center; flex-direction: column;">
             <ui:VisualElement name="ve_pre_kaizen_layout_area" />
             <ui:VisualElement name="ve_post_kaizen_layout_area" />
             <ui:ScrollView name="scroll_layout_area" style="flex-grow: 1; justify-content: center; align-self: center; display: none;" />
