--- a/Assets/UI/StyleSheets/LayoutEditorStyles.uss
+++ b/Assets/UI/StyleSheets/LayoutEditorStyles.uss
@@ -147,3 +147,10 @@ VisualElement {
     border-top-color: rgb(243, 171, 0);
     border-bottom-color: rgb(243, 171, 0);
 }
+
+.floor_photo {
+    background-image: url('project://database/Assets/UI/Sprites/PictureIcon.png?fileID=21300000&guid=501cac3b619809e4cae9622b0a485491&type=3#PictureIcon');
+    width: 48px;
+    height: 48px;
+    -unity-background-scale-mode: scale-to-fit;
+}
