--- a/Assets/UI/StyleSheets/LayoutEditorStyles.uss
+++ b/Assets/UI/StyleSheets/LayoutEditorStyles.uss
@@ -65,7 +65,8 @@ VisualElement {
 }
 
 .conveyor_icon {
-    background-image: url('project://database/Assets/UI/Sprites/Conveyor%20Roller.jpg?fileID=2800000&guid=c1d7395b32dbb28499252fdd0589535b&type=3#Conveyor Roller');
+    background-image: url('project://database/Assets/UI/Sprites/conveyor512.png?fileID=21300000&guid=db54583790625664bbb2855aeec889ff&type=3#conveyor512');
+    -unity-background-scale-mode: scale-and-crop;
 }
 
 .machine_icon {
@@ -153,4 +154,16 @@ VisualElement {
     width: 48px;
     height: 48px;
     -unity-background-scale-mode: scale-to-fit;
+}
+
+.undo-redo-buttons {
+    background-color: rgba(188, 188, 188, 0);
+    background-image: url('project://database/Assets/UI/Sprites/undo-circular-arrow.png?fileID=21300000&guid=1f98a3de3f3009249863e5f9664096b5&type=3#undo-circular-arrow');
+    -unity-background-scale-mode: scale-to-fit;
+    border-top-width: 0;
+    border-right-width: 0;
+    border-bottom-width: 0;
+    border-left-width: 0;
+    width: 32px;
+    height: 32px;
 }
