--- a/Assets/UI/UXML/LayoutEditor.uxml
+++ b/Assets/UI/UXML/LayoutEditor.uxml
@@ -3,8 +3,12 @@
     <Style src="project://database/Assets/UI/StyleSheets/FloorIconStyles.uss?fileID=7433441132597879392&amp;guid=273822ff3b16a7343a5b859dd5c6f3b8&amp;type=3#FloorIconStyles" />
     <ui:VisualElement name="ve_floor_plan_screen" style="background-color: rgba(0, 0, 0, 0); flex-grow: 1;">
         <ui:Label tabindex="-1" text="Pre-Kaizen Layout" display-tooltip-when-elided="true" name="lbl_layout_header" style="background-color: rgb(203, 231, 255); -unity-text-align: upper-center; -unity-font-style: bold; font-size: 32px; margin-bottom: 0; margin-top: 0; margin-right: 0; margin-left: 0; padding-top: 0; padding-right: 0; padding-bottom: 10px; padding-left: 0;" />
-        <ui:VisualElement name="ve_inspector" style="background-color: rgb(203, 231, 255); visibility: visible; overflow: hidden; display: flex; flex-direction: row;">
-            <ui:Button text="Back Button" display-tooltip-when-elided="true" name="btn_back" style="font-size: 24px; flex-shrink: 1; display: flex; background-color: rgb(203, 231, 255);" />
+        <ui:VisualElement name="ve_inspector" style="background-color: rgb(203, 231, 255); visibility: visible; overflow: hidden; display: flex; flex-direction: row; flex-grow: 1;">
+            <ui:Button display-tooltip-when-elided="true" name="btn_back" style="font-size: 24px; flex-shrink: 1; display: flex; background-color: rgb(203, 231, 255); background-image: url(&apos;project://database/Assets/UI/Sprites/arrow.png?fileID=21300000&amp;guid=94c83d08fd37ed147a722e64bb1060df&amp;type=3#arrow&apos;); -unity-background-scale-mode: scale-to-fit; width: 64px;" />
+            <ui:VisualElement name="ve_undo_redo" style="flex-grow: 1; flex-direction: row; margin-left: 20px; justify-content: space-between; align-self: center;">
+                <ui:Button display-tooltip-when-elided="true" name="btn_undo" class="undo-redo-buttons" />
+                <ui:Button display-tooltip-when-elided="true" name="btn_redo" class="undo-redo-buttons" style="background-image: url(&apos;project://database/Assets/UI/Sprites/redo-circular-arrow.png?fileID=21300000&amp;guid=74ce92729d60a7946b7e9ea8e5c6e58d&amp;type=3#redo-circular-arrow&apos;);" />
+            </ui:VisualElement>
             <ui:VisualElement name="ve_floor_specs" class="skyblue_background" style="flex-grow: 1; overflow: hidden; width: 30%; visibility: visible; border-right-width: 5px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); display: flex;">
                 <ui:Label tabindex="-1" text="Floor Area" display-tooltip-when-elided="true" style="font-size: 24px; -unity-text-align: upper-center;" />
                 <ui:VisualElement name="ve_container" style="flex-grow: 0; width: 70%; align-self: center;">
@@ -12,13 +16,13 @@
                     <ui:FloatField label="Width (m)" value="5" name="float_floor_width" class="inspector_float_field" style="width: 100%; justify-content: center;" />
                 </ui:VisualElement>
             </ui:VisualElement>
-            <ui:VisualElement name="ve_selection_inspector" class="skyblue_background" style="flex-grow: 1; overflow: hidden; width: 50%; visibility: visible;">
+            <ui:VisualElement name="ve_selection_inspector" class="skyblue_background" style="flex-grow: 1; overflow: hidden; width: 50%; visibility: visible; flex-shrink: 1;">
                 <ui:VisualElement name="ve_layout_icon_inspector" style="flex-grow: 1; display: flex; visibility: visible;">
                     <ui:Label tabindex="-1" text="Current Selection" display-tooltip-when-elided="true" style="font-size: 24px; -unity-text-align: upper-center;" />
                     <ui:VisualElement name="ve_inspector_container" style="padding-bottom: 40px; flex-direction: row;">
                         <ui:VisualElement name="ve_left_fields" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-right-width: 1px;">
-                            <ui:FloatField label="Height (m)" value="0" name="float_height" style="align-self: center;" />
-                            <ui:FloatField label="Width (m) " value="0" name="float_width" style="align-self: center;" />
+                            <ui:FloatField label="Height (m)" value="0" name="float_height" style="align-self: center; flex-grow: 0; max-height: 100px; min-height: 40px;" />
+                            <ui:FloatField label="Width (m) " value="0" name="float_width" style="align-self: center; max-height: 100px; min-height: 40px;" />
                         </ui:VisualElement>
                         <ui:VisualElement name="ve_right_fields" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0);">
                             <ui:Vector2Field name="v2_position" style="padding-right: 10px; align-self: center;" />
@@ -34,9 +38,9 @@
                     </ui:VisualElement>
                 </ui:VisualElement>
             </ui:VisualElement>
-            <ui:Button text="Next Button" display-tooltip-when-elided="true" name="btn_next" style="font-size: 24px; flex-shrink: 1; background-color: rgb(203, 231, 255);" />
+            <ui:Button display-tooltip-when-elided="true" name="btn_next" style="font-size: 24px; flex-shrink: 1; background-color: rgb(203, 231, 255); background-image: url(&apos;project://database/Assets/UI/Sprites/arrow%201.png?fileID=21300000&amp;guid=c9f7bb6d3f9200646ab80834c59faeef&amp;type=3#arrow 1&apos;); -unity-background-scale-mode: scale-to-fit; width: 64px;" />
         </ui:VisualElement>
-        <ui:VisualElement name="ve_layout_container" focusable="true" style="background-color: rgb(255, 255, 255); flex-grow: 1; align-items: center; justify-content: center; flex-direction: column; min-height: 60%; max-height: 80%;">
+        <ui:VisualElement name="ve_layout_container" focusable="true" style="background-color: rgb(255, 255, 255); flex-grow: 1; align-items: center; justify-content: center; flex-direction: column; min-height: 50%; max-height: 80%;">
             <ui:VisualElement name="ve_floor" />
             <ui:VisualElement name="ve_post_kaizen_layout_area" />
             <ui:ScrollView name="scroll_layout_area" style="flex-grow: 1; justify-content: center; align-self: center; display: none;" />
