--- a/Assets/UI/UXML/FloorDimensionsInput.uxml
+++ b/Assets/UI/UXML/FloorDimensionsInput.uxml
@@ -1,23 +1,24 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
+    <Style src="project://database/Assets/UI/StyleSheets/FloorSettingsStyle.uss?fileID=7433441132597879392&amp;guid=15a2ef4d11464c04e8d2cb2fd3acb9d6&amp;type=3#FloorSettingsStyle" />
     <ui:VisualElement name="ve_root_element" style="flex-grow: 1; background-color: rgb(144, 144, 144); justify-content: center;">
         <ui:VisualElement name="ve_floor_specs" class="skyblue_background" style="flex-grow: 1; overflow: hidden; visibility: visible; align-self: center; justify-content: flex-start; height: 60%; max-height: 80%; background-color: rgb(203, 231, 255); width: 80%; max-width: 80%; min-height: 60%;">
-            <ui:Label tabindex="-1" text="Please Enter Kaizen Area Dimensions" display-tooltip-when-elided="true" style="font-size: 24px; -unity-text-align: upper-center; padding-top: 20px;" />
+            <ui:Label tabindex="-1" text="改善するエリアの寸法を入力してください" display-tooltip-when-elided="true" style="font-size: 24px; -unity-text-align: upper-center; padding-top: 20px; -unity-font-definition: url(&apos;project://database/Assets/UI/NotoSansJP-VariableFont_wght.ttf?fileID=12800000&amp;guid=62d3f4a7445c7ed48bbc2aabf8e07646&amp;type=3#NotoSansJP-VariableFont_wght&apos;); -unity-font-style: bold;" />
             <ui:VisualElement name="ve_container" style="flex-grow: 0; align-self: center; flex-direction: row; width: 90%; height: 60%; padding-top: 10%;">
                 <ui:VisualElement name="ve_floor_length" style="justify-content: center; align-self: auto; padding-right: 10px;">
-                    <ui:Label tabindex="-1" text="Length" display-tooltip-when-elided="true" style="-unity-text-align: upper-center; font-size: 16px;" />
+                    <ui:Label tabindex="-1" text="縦" display-tooltip-when-elided="true" style="-unity-text-align: upper-center; font-size: 16px; -unity-font-definition: url(&apos;project://database/Assets/UI/NotoSansJP-VariableFont_wght.ttf?fileID=12800000&amp;guid=62d3f4a7445c7ed48bbc2aabf8e07646&amp;type=3#NotoSansJP-VariableFont_wght&apos;); -unity-font-style: bold;" />
                     <ui:FloatField value="5" name="float_floor_length" style="height: auto; flex-shrink: 1;" />
-                    <ui:Label tabindex="-1" text="meters" display-tooltip-when-elided="true" style="-unity-text-align: upper-center;" />
+                    <ui:Label tabindex="-1" text="ｍ" display-tooltip-when-elided="true" style="-unity-text-align: upper-center;" />
                 </ui:VisualElement>
                 <ui:VisualElement name="ve_floor" style="flex-grow: 1; background-color: rgb(255, 255, 255); border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px;" />
                 <ui:VisualElement style="min-width: 10%;" />
             </ui:VisualElement>
             <ui:VisualElement name="ve_floor_width" style="flex-grow: 0; width: 70%; align-self: center; flex-direction: row; justify-content: center; padding-top: 10px; padding-bottom: 10px;">
-                <ui:Label tabindex="-1" text="Width" display-tooltip-when-elided="true" style="-unity-text-align: middle-center; font-size: 16px;" />
+                <ui:Label tabindex="-1" text="横" display-tooltip-when-elided="true" style="-unity-text-align: middle-center; font-size: 16px; -unity-font-definition: url(&apos;project://database/Assets/UI/NotoSansJP-VariableFont_wght.ttf?fileID=12800000&amp;guid=62d3f4a7445c7ed48bbc2aabf8e07646&amp;type=3#NotoSansJP-VariableFont_wght&apos;); -unity-font-style: bold;" />
                 <ui:FloatField value="5" name="float_floor_width" class="inspector_float_field" style="justify-content: center;" />
-                <ui:Label tabindex="-1" text="meters" display-tooltip-when-elided="true" style="-unity-text-align: middle-center;" />
+                <ui:Label tabindex="-1" text="ｍ" display-tooltip-when-elided="true" style="-unity-text-align: middle-center;" />
             </ui:VisualElement>
-            <ui:VisualElement style="flex-grow: 1; padding-top: 30px;">
-                <ui:Button text="Finished" display-tooltip-when-elided="true" name="btn_finished" style="align-self: center; background-color: rgb(203, 231, 255); border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; flex-grow: 1; flex-shrink: 1; font-size: 24px; height: 5%; width: 30%; max-height: 25%;" />
+            <ui:VisualElement style="flex-grow: 1; padding-top: 30px; -unity-font-definition: url(&apos;project://database/Assets/UI/NotoSansJP-VariableFont_wght.ttf?fileID=12800000&amp;guid=62d3f4a7445c7ed48bbc2aabf8e07646&amp;type=3#NotoSansJP-VariableFont_wght&apos;); -unity-font-style: bold;">
+                <ui:Button text="完了" display-tooltip-when-elided="true" name="btn_finished" style="align-self: center; background-color: rgb(203, 231, 255); border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; flex-grow: 1; flex-shrink: 1; font-size: 24px; height: 5%; width: 30%; max-height: 25%;" />
             </ui:VisualElement>
         </ui:VisualElement>
     </ui:VisualElement>
