--- a/Assets/UI/StyleSheets/KaizenForm.uss
+++ b/Assets/UI/StyleSheets/KaizenForm.uss
@@ -6,20 +6,31 @@
 .footer-text {
     flex-wrap: wrap;
     flex-direction: column;
-    flex-grow: 0;
-    width: 50%;
+    flex-grow: 1;
     -unity-font-definition: url('project://database/Assets/UI/NotoSansJP-VariableFont_wght.ttf?fileID=12800000&guid=62d3f4a7445c7ed48bbc2aabf8e07646&type=3#NotoSansJP-VariableFont_wght');
-    border-left-color: rgb(0, 0, 0);
-    border-right-color: rgb(0, 0, 0);
-    border-top-color: rgb(0, 0, 0);
-    border-bottom-color: rgb(0, 0, 0);
-    border-top-width: 2px;
-    border-right-width: 2px;
-    border-bottom-width: 2px;
-    border-left-width: 2px;
 }
 
 .container-border {
     border-width: 2px;
     border-color: rgb(0, 0, 0);
+}
+
+.label-text {
+    -unity-font-definition: url('project://database/Assets/UI/NotoSansJP-VariableFont_wght.ttf?fileID=12800000&guid=62d3f4a7445c7ed48bbc2aabf8e07646&type=3#NotoSansJP-VariableFont_wght');
+    -unity-font-style: bold;
+    font-size: 24px;
+}
+
+.footer-container {
+    flex-grow: 1;
+    width: 50%;
+    height: auto;
+    border-top-width: 2px;
+    border-right-width: 2px;
+    border-bottom-width: 2px;
+    border-left-width: 2px;
+    border-left-color: rgb(0, 0, 0);
+    border-right-color: rgb(0, 0, 0);
+    border-top-color: rgb(0, 0, 0);
+    border-bottom-color: rgb(0, 0, 0);
 }
