--- a/Assets/UI/StyleSheets/KaizenForm.uss
+++ b/Assets/UI/StyleSheets/KaizenForm.uss
@@ -3,6 +3,15 @@
     background-color: rgb(250, 249, 249);
 }
 
+.grey-background {
+    flex-grow: 1;
+    background-color: rgba(125, 125, 125, 0.82);
+}
+
+.hidden-text{
+	display: none;
+}
+
 .footer-text {
     flex-wrap: wrap;
     flex-direction: column;
